<resources>
    <string name="app_name">DigitalPaisa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--PricesFragment-->
    <string name="menu_icon">Menu_Icon</string>
    <string name="search_icon">search_icon</string>
    <string name="arrow_down_icon">arrow Down Icon</string>
    <string name="coming_soon">Coming soon . . . !</string>
    <string name="dummy_text">$918073846893</string>
    <string name="prices">Prices</string>
    <string name="favorites">Favorites</string>
    <string name="portfolio">Portfolio</string>
    <string name="news">News</string>
    <string name="invest">Invest</string>
    <string name="search_coins">Search Coins . . .</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="change">Change</string>
    <string name="btc">BTC</string>
    <string name="empty">---</string>
    <string name="global_market_cap">Global Market Cap:</string>

</resources>
